--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,13 @@ workflows:
             branches:
               only:
                 - main
+      - deploy:
+          filters:
+            branches:
+              only:
+                - main
+          requires:
+            - build
 
 jobs:
   build:
@@ -29,3 +36,10 @@ jobs:
           key: dependency-cache-{{ checksum "package-lock.json" }}
           paths:
             - ./node_modules
+  deploy:
+    docker:
+      - image: circleci/node:10.16.3
+    steps:
+      - run:
+          name: deploy-application
+          command: ssh -o StrictHostKeyChecking=no ubuntu@ec2-13-50-252-101.eu-north-1.compute.amazonaws.com "rm -rf ~/ExampleApplication/;git clone https://github.com/DMLFrancis/ExampleNew.git; source ExampleApplication/deploy.sh"
